# onyx

./: .gitignore  README.md  app.js  index.html  requirements.txt  serve_frontend.py  skills.md  start_render.py  style.css
agent/: README.md  cleanup_onyx_registrations.py  config.py  env.example  models.py  onyx_client.py  requirements.txt  runtime.py  scale_codec.py  test_scale_codec.py  van_client.py  vara_client.py
app/src/: lib.rs
contract/: Cargo.toml
contract/app/: Cargo.toml
contract/app/src/: lib.rs
contract/src/: lib.rs
frontend/: app.js  index.html
